[package]
name = "digital-garden-egghead"
version = "0.1.0"
authors = ["m-allanson <michael.allanson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dg"
path = "src/main.rs"

[dependencies]
color-eyre = "0.5.10"
